; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_datalink.c_datalink_Rename.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_datalink.c_datalink_Rename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.datalink = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @datalink_Rename(%struct.datalink* %0, i8* %1) #0 {
  %3 = alloca %struct.datalink*, align 8
  %4 = alloca i8*, align 8
  store %struct.datalink* %0, %struct.datalink** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load %struct.datalink*, %struct.datalink** %3, align 8
  %6 = getelementptr inbounds %struct.datalink, %struct.datalink* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  %8 = call i32 @free(i32 %7)
  %9 = load i8*, i8** %4, align 8
  %10 = call i32 @strdup(i8* %9)
  %11 = load %struct.datalink*, %struct.datalink** %3, align 8
  %12 = getelementptr inbounds %struct.datalink, %struct.datalink* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 8
  %13 = load %struct.datalink*, %struct.datalink** %3, align 8
  %14 = getelementptr inbounds %struct.datalink, %struct.datalink* %13, i32 0, i32 1
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %16, i32 0, i32 0
  store i32 %10, i32* %17, align 4
  ret void
}

declare dso_local i32 @free(i32) #1

declare dso_local i32 @strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
